# modular-framework-v2

./: .gitignore  apply-changes_2.py  fix_json.sh  input.json  input10.json  input11.json  input12.json  input13.json  input2.json  input3.json  input4.json  input5.json  input6.json  input7.json  input8.json  input9.json  input_template.json  part_01.diff  part_02.diff  part_03.diff  part_04.diff  part_05.diff  part_06.diff  patches.diff  plan-check.py  plan-lint.py  runner-agent-fixed.json  runner-agent-module-fixed2.json  runner-agent-module.json  tester-logger.json
RAG_v2/input/codecontext-rag/: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  docker-compose.yml.old  pyproject.toml  requirements.txt  updatesc.sh
RAG_v2/input/codecontext-rag/cli/: codecontext_cli.py
RAG_v2/input/codecontext-rag/docs/api/: openapi.yaml
RAG_v2/input/codecontext-rag/frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
RAG_v2/input/codecontext-rag/frontend/src/: App.jsx  App.tsx  index.css  main.tsx  styles.css  types.ts
RAG_v2/input/codecontext-rag/frontend/src/context/: AppContext.tsx
RAG_v2/input/codecontext-rag/frontend/src/hooks/: useDebounce.ts  useFeatures.ts  useRepositories.ts
RAG_v2/input/codecontext-rag/scripts/: benchmark.py  index_repository.py
RAG_v2/input/codecontext-rag/src/codecontext/: config.py  main.py
RAG_v2/input/codecontext-rag/tests/integration/: test_health.py  test_recommendations.py  test_repositories.py  test_search.py
input-parser/: apply-workflows.py  (+16 more)
(+662 files in other folders)
